# product-intelligence

backend/: .gitignore  conftest.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: ingest.py
backend/app/models/: orm.py  product.py  search.py
backend/app/services/: embedder.py  image_pipeline.py
backend/tests/: conftest.py  test_ingest.py
infra/: docker-compose.yaml
scripts/: bulk_embed.py  embedding_experiments.py  seed_products.py
