[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.43.3",
    "faker>=40.15.0",
    "fastapi[standard]>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "imagehash>=4.3.2",
    "instructor>=1.15.1",
    "langfuse>=4.5.1",
    "numpy>=2.4.4",
    "open-clip-torch>=3.3.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "ruff>=0.15.12",
    "sentence-transformers>=5.4.1",
    "sqlalchemy[asyncio,asynio]>=2.0.49",
    "temporalio>=1.27.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
